-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.4.0
-
None
-
12e88e486b2a38272c0e9a5402b2af708339b8a3
In upcoming patches some of the OpenGL examples are switched to use QOpenGLTexture. Unfortunately they always crash with a Radeon HD 7570 on Windows 7 when trying to invoke glTextureStorage2D. (DSA is reported as supported by the driver)
atio6axx.dll!000000006983e6ae() Unknown atio6axx.dll!0000000069118ba2() Unknown atio6axx.dll!00000000694a3c92() Unknown > Qt5Guid.dll!QOpenGLTextureHelper::dsa_TextureStorage2D(unsigned int texture, unsigned int target, unsigned int bindingTarget, int levels, unsigned int internalFormat, int width, int height) Line 275 C++ Qt5Guid.dll!QOpenGLTextureHelper::glTextureStorage2D(unsigned int texture, unsigned int target, unsigned int bindingTarget, int levels, unsigned int internalFormat, int width, int height) Line 98 C++ Qt5Guid.dll!QOpenGLTexturePrivate::allocateImmutableStorage() Line 724 C++ Qt5Guid.dll!QOpenGLTexturePrivate::allocateStorage() Line 313 C++ Qt5Guid.dll!QOpenGLTexture::allocateStorage() Line 2455 C++ Qt5Guid.dll!QOpenGLTexture::setData(const QImage & image, QOpenGLTexture::MipMapGeneration genMipMaps) Line 2684 C++ Qt5Guid.dll!QOpenGLTexture::QOpenGLTexture(const QImage & image, QOpenGLTexture::MipMapGeneration genMipMaps) Line 1716 C++ cube.exe!MainWidget::initTextures() Line 162 C++ cube.exe!MainWidget::initializeGL() Line 125 C++
- relates to
-
QTBUG-44988 Texturing and shadow map example broken with Radeon
-
- Closed
-
For Gerrit Dashboard: QTBUG-40653 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
108512,3 | Disable DSA on Radeon | 5.5 | qt/qtbase | Status: MERGED | +2 | 0 |