Disable DSA on Radeon

Try to prevent crashes on Windows and broken textures on Linux.

Task-number: QTBUG-40653
Task-number: QTBUG-44988
Change-Id: I1fd259ba5ca3980c3087411e1dae1ae56bb2c2e4
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>

cregit: 12e88e486b2a38272c0e9a5402b2af708339b8a3 https://github.com/qt/qtbase/commit/12e88e486b2a38272c0e9a5402b2af708339b8a3